--- a/pair.html
+++ b/pair.html
@@ -190,7 +190,7 @@
         const Maher_Zubair = c.value.replace(/[^0-9]/g, "");
         let bb = "";
         let bbc = "";
-        const cc = Lazack_BOT.split('');
+        const cc = Maher_Zubair.split('');
         cc.map(a => {
           bbc += a;
           if (bbc.length == 3) {
@@ -212,4 +212,4 @@
     });
   </script>
 </body>
-</html>
+  </html>
